--- a/LearnEng_Chat/templates/scenario_configuration.html
+++ b/LearnEng_Chat/templates/scenario_configuration.html
@@ -52,6 +52,7 @@
         </div> -->
     </nav>
 
+    {% if (scenario) %}
     <div class="d-flex mt-4 justify-content-center pb-3">
         <div class="card col-md-10 border-0 shadow-sm pb-4">
             <div class="card-body mx-2">
@@ -61,13 +62,15 @@
                     </h3>
                     <button class="btn btn-sc-level rounded-pill px-4" disabled>Level 1</button>
                 </div>
-                <form class="d-flex justify-content-center flex-wrap" id="scenarioForm" action="{{ url_for('scenario_controller.submit_scenario') }}" method="POST">
-                    <input type="hidden" id="scenarioID" name="scenarioID"/>
-                    <input type="hidden" id="level" name="level" value="1"/>
+                <form class="d-flex justify-content-center flex-wrap" id="scenarioForm"
+                    action="{{ url_for('scenario_controller.submit_scenario') }}" method="POST">
+                    <input type="hidden" id="{{ scenario._id }}" name="{{ scenario._id }}" />
+                    <input type="hidden" id="level" name="level" value="{{ scenario._level._id}}" />
                     <div class="scenarioImage mb-4 px-4">
                         <div>
-                            <img class="rounded mb-3" id="selectedImage" src="{{ url_for('static', filename='images/placeholder.png') }}"
-                                alt="Scenario Image" style="width: 300px;" />
+                            <img class="rounded mb-3" id="selectedImage"
+                                src="{{ url_for('static', filename='images/{{ scenario._image}}') }}" alt="Scenario Image"
+                                style="width: 300px;" />
                         </div>
                         <div class="d-flex justify-content-center">
                             <div data-mdb-ripple-init class="btn btn-primary rounded-pill" style="width:200px;">
@@ -81,7 +84,83 @@
                         <div class="form-group row mb-3">
                             <label class="col-md-3" for="scenarioName">Name</label>
                             <div class="col-md-9">
-                                <input class="form-control" type="text" id="scenarioName" name="scenarioName" value="scenario_xx">
+                                <input class="form-control" type="text" id="scenarioName" name="scenarioName"
+                                    value="{{ scenario._name }}">
+                            </div>
+                        </div>
+                        <div class="form-group row mb-3">
+                            <label class="col-md-3" for="scenarioDescription">Scenario Description</label>
+                            <div class="col-md-9">
+                                <textarea class="form-control" id="scenarioDescription" rows="5"
+                                    placeholder="Create a hotel scenario which allows the learner to book a room."
+                                    name="scenarioDescription">{{ scenario._description }}</textarea>
+                            </div>
+                        </div>
+                        <div class="form-group row mb-3">
+                            <label class="col-md-3" for="characterDescription">Character Description</label>
+                            <div class="col-md-9 input-group">
+                                <textarea class="rounded-0 rounded-top form-control w-100" id="characterDescription"
+                                    rows="5"
+                                    placeholder="The ai character will act as a front desk officer in the hotel."
+                                    name="characterDescription">{{ scenario.__characterDesc }}</textarea>
+                                <button type="button"
+                                    class="form-button btn-conf-character btn-primary border-0 rounded-0 rounded-bottom w-100 py-2">
+                                    <i class="bi-gear me-2"></i>Character Configuration</button>
+                            </div>
+                        </div>
+                        <div class="form-group row mb-3">
+                            <label class="col-md-3" for="vocab">Vocabularies</label>
+                            <div class="col-md-9">
+                                <textarea class="form-control" id="vocab" rows="2"
+                                    placeholder="Reservation, Availability, Occupancy"
+                                    name="vocab">Reservation, Availability, Occupancy</textarea>
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="d-flex justify-content-end w-100">
+                        <button type="cancel" class="btn px-5 link rounded-pill">Cancel</button>
+                        <button type="submit" class="btn btn-primary px-5 rounded-pill">Save</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    {% else %}
+    <div class="d-flex mt-4 justify-content-center pb-3">
+        <div class="card col-md-10 border-0 shadow-sm pb-4">
+            <div class="card-body mx-2">
+                <div class="d-flex justify-content-between border-bottom border-secondary px-1 mb-4 pb-2">
+                    <h3 class="card-title">
+                        Scenario Configuration
+                    </h3>
+                    <button class="btn btn-sc-level rounded-pill px-4" disabled>Level 1</button>
+                </div>
+                <form class="d-flex justify-content-center flex-wrap" id="scenarioForm"
+                    action="{{ url_for('scenario_controller.submit_scenario') }}" method="POST">
+                    <input type="hidden" id="scenarioID" name="scenarioID" />
+                    <input type="hidden" id="level" name="level" value="1" />
+                    <div class="scenarioImage mb-4 px-4">
+                        <div>
+                            <img class="rounded mb-3" id="selectedImage"
+                                src="{{ url_for('static', filename='images/placeholder.png') }}" alt="Scenario Image"
+                                style="width: 300px;" />
+                        </div>
+                        <div class="d-flex justify-content-center">
+                            <div data-mdb-ripple-init class="btn btn-primary rounded-pill" style="width:200px;">
+                                <label class="form-label m-1" for="scenarioImage">Choose file</label>
+                                <input type="file" class="form-control d-none" id="scenarioImage" name="scenarioImage"
+                                    onchange="displaySelectedImage(event, 'selectedImage')" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="textfield w-100">
+                        <div class="form-group row mb-3">
+                            <label class="col-md-3" for="scenarioName">Name</label>
+                            <div class="col-md-9">
+                                <input class="form-control" type="text" id="scenarioName" name="scenarioName"
+                                    value="scenario_xx">
                             </div>
                         </div>
                         <div class="form-group row mb-3">
@@ -108,7 +187,8 @@
                             <label class="col-md-3" for="vocab">Vocabularies</label>
                             <div class="col-md-9">
                                 <textarea class="form-control" id="vocab" rows="2"
-                                    placeholder="Reservation, Availability, Occupancy" name="vocab">Reservation, Availability, Occupancy</textarea>
+                                    placeholder="Reservation, Availability, Occupancy"
+                                    name="vocab">Reservation, Availability, Occupancy</textarea>
                             </div>
                         </div>
 
@@ -122,6 +202,7 @@
             </div>
         </div>
     </div>
+    {% endif %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -166,44 +247,44 @@
 
 
 
-        // create new scenario
-        // const scenarioController = require('./controllers/scenarioController');
+            // create new scenario
+            // const scenarioController = require('./controllers/scenarioController');
 
-        // router.post('/scenario')
+            // router.post('/scenario')
 
-        //     $('#scenarioForm').on('submit', function (event) {
-        //         event.preventDefault(); // Prevent the form from submitting the traditional way
+            //     $('#scenarioForm').on('submit', function (event) {
+            //         event.preventDefault(); // Prevent the form from submitting the traditional way
 
-        //         // Serialize the form data
-        //         var formData = new FormData(this);
+            //         // Serialize the form data
+            //         var formData = new FormData(this);
 
-        //         // Log the form fields
-        //         formData.forEach(function (value, key) {
-        //             console.log(key + ': ' + value);
-        //         });
+            //         // Log the form fields
+            //         formData.forEach(function (value, key) {
+            //             console.log(key + ': ' + value);
+            //         });
 
-        //         // Handle file input manually (because FormData handles files as well)
-        //         var fileInput = $('#scenarioImage')[0];
-        //         if (fileInput.files.length > 0) {
-        //             console.log('Selected file: ' + fileInput.files[0].name);
-        //         }
-
-
-        //         $.ajax({
-        //             type: 'POST',
-        //             url: '/scenario',
-        //             data: $(this).serialize(),
-        //             // success: function(response) {
-        //             //     window
-        //             // }
-        //             error: function(xhr) {
-        //                 alert('Error: ' + xhr.responseText);
-        //             }
-        //         })
-        //     });
+            //         // Handle file input manually (because FormData handles files as well)
+            //         var fileInput = $('#scenarioImage')[0];
+            //         if (fileInput.files.length > 0) {
+            //             console.log('Selected file: ' + fileInput.files[0].name);
+            //         }
 
 
-        // if the scenario existed, run the jquery / ajax that add value to the form fields
+            //         $.ajax({
+            //             type: 'POST',
+            //             url: '/scenario',
+            //             data: $(this).serialize(),
+            //             // success: function(response) {
+            //             //     window
+            //             // }
+            //             error: function(xhr) {
+            //                 alert('Error: ' + xhr.responseText);
+            //             }
+            //         })
+            //     });
+
+
+            // if the scenario existed, run the jquery / ajax that add value to the form fields
 
         });
 
